// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component Renders correctly 1`] = `
<div>
  <label
    class="relative"
  >
    <span
      class="absolute -top-6 left-3 px-1 bg-white"
    >
      <span
        class="text-sm leading-5"
      >
        Name
      </span>
    </span>
    <input
      class="border rounded-full px-4 py-2 focus:outline-0 focus:ring focus:ring-primary/30"
    />
  </label>
</div>
`;

exports[`Badge component Renders dark mode correctly 1`] = `
<div>
  <label
    class="relative"
  >
    <span
      class="absolute -top-6 left-3 px-1 bg-brand-black text-white"
    >
      <span
        class="text-sm leading-5"
      >
        Name
      </span>
    </span>
    <input
      class="border rounded-full px-4 py-2 focus:outline-0 focus:ring bg-brand-black border-white text-white"
    />
  </label>
</div>
`;
